--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,442 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.wrapper {
+  width: 100%;
+  min-height: 400px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.container {
+  padding: 30px;
+  border-radius: 10px;
+  background-color: #fff;
+  color: black;
+  border: 3px double var(--dark);
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+
+.btn {
+  width: 100px;
+  height: 40px;
+  border: none;
+  border-radius: 30px;
+  padding: 10px 20px;
+  cursor: pointer;
+  background-color: var(--third);
+  font-size: 15px;
+  font-family: 'S-CoreDream-3Light', serif;
+  margin: 10px;
+}
+
+.btn:disabled {
+  filter:opacity(0.6);
+  background-color: var(--gray);
+  cursor: not-allowed;
+}
+.btn.apply {
+  width: 100%;
+  margin: 0;
+}
+.btn:not(:disabled):hover {
+  background-color: var(--point);
+  font-weight: 900;
+}
+
+h1 {
+  width: 100%;
+  margin-bottom: 20px;
+}
+h1 span {
+  color: var(--point);
+  font-size: 12px;
+}
+tbody {
+  display: block;
+}
+tr {
+  display: block;
+  width: 100%;
+  line-height: 30px;
+  margin-bottom: 10px;
+}
+td {
+  max-width: 500px;
+}
+td input[type="text"],
+td input[type="tel"],
+td input[type="email"] {
+  width: 500px;
+  height: 30px;
+}
+table .subTitle {
+  width: 90px;
+  font-weight: 900;
+}
+
+.buttons {
+  width: 100%;
+  padding: 20px 30px 10px 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+
+
+/*------------------------------------------------ home */
+
+.homeWrapper {
+  width: 100%;
+  height: 100vh;
+  background-color: #ffffff;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='0' x2='0' y1='0' y2='100%25' gradientTransform='rotate(180,840,428)'%3E%3Cstop offset='0' stop-color='%23ffffff'/%3E%3Cstop offset='1' stop-color='%235714DF'/%3E%3C/linearGradient%3E%3Cpattern patternUnits='userSpaceOnUse' id='b' width='393' height='327.5' x='0' y='0' viewBox='0 0 1080 900'%3E%3Cg fill-opacity='0.02'%3E%3Cpolygon fill='%23444' points='90 150 0 300 180 300'/%3E%3Cpolygon points='90 150 180 0 0 0'/%3E%3Cpolygon fill='%23AAA' points='270 150 360 0 180 0'/%3E%3Cpolygon fill='%23DDD' points='450 150 360 300 540 300'/%3E%3Cpolygon fill='%23999' points='450 150 540 0 360 0'/%3E%3Cpolygon points='630 150 540 300 720 300'/%3E%3Cpolygon fill='%23DDD' points='630 150 720 0 540 0'/%3E%3Cpolygon fill='%23444' points='810 150 720 300 900 300'/%3E%3Cpolygon fill='%23FFF' points='810 150 900 0 720 0'/%3E%3Cpolygon fill='%23DDD' points='990 150 900 300 1080 300'/%3E%3Cpolygon fill='%23444' points='990 150 1080 0 900 0'/%3E%3Cpolygon fill='%23DDD' points='90 450 0 600 180 600'/%3E%3Cpolygon points='90 450 180 300 0 300'/%3E%3Cpolygon fill='%23666' points='270 450 180 600 360 600'/%3E%3Cpolygon fill='%23AAA' points='270 450 360 300 180 300'/%3E%3Cpolygon fill='%23DDD' points='450 450 360 600 540 600'/%3E%3Cpolygon fill='%23999' points='450 450 540 300 360 300'/%3E%3Cpolygon fill='%23999' points='630 450 540 600 720 600'/%3E%3Cpolygon fill='%23FFF' points='630 450 720 300 540 300'/%3E%3Cpolygon points='810 450 720 600 900 600'/%3E%3Cpolygon fill='%23DDD' points='810 450 900 300 720 300'/%3E%3Cpolygon fill='%23AAA' points='990 450 900 600 1080 600'/%3E%3Cpolygon fill='%23444' points='990 450 1080 300 900 300'/%3E%3Cpolygon fill='%23222' points='90 750 0 900 180 900'/%3E%3Cpolygon points='270 750 180 900 360 900'/%3E%3Cpolygon fill='%23DDD' points='270 750 360 600 180 600'/%3E%3Cpolygon points='450 750 540 600 360 600'/%3E%3Cpolygon points='630 750 540 900 720 900'/%3E%3Cpolygon fill='%23444' points='630 750 720 600 540 600'/%3E%3Cpolygon fill='%23AAA' points='810 750 720 900 900 900'/%3E%3Cpolygon fill='%23666' points='810 750 900 600 720 600'/%3E%3Cpolygon fill='%23999' points='990 750 900 900 1080 900'/%3E%3Cpolygon fill='%23999' points='180 0 90 150 270 150'/%3E%3Cpolygon fill='%23444' points='360 0 270 150 450 150'/%3E%3Cpolygon fill='%23FFF' points='540 0 450 150 630 150'/%3E%3Cpolygon points='900 0 810 150 990 150'/%3E%3Cpolygon fill='%23222' points='0 300 -90 450 90 450'/%3E%3Cpolygon fill='%23FFF' points='0 300 90 150 -90 150'/%3E%3Cpolygon fill='%23FFF' points='180 300 90 450 270 450'/%3E%3Cpolygon fill='%23666' points='180 300 270 150 90 150'/%3E%3Cpolygon fill='%23222' points='360 300 270 450 450 450'/%3E%3Cpolygon fill='%23FFF' points='360 300 450 150 270 150'/%3E%3Cpolygon fill='%23444' points='540 300 450 450 630 450'/%3E%3Cpolygon fill='%23222' points='540 300 630 150 450 150'/%3E%3Cpolygon fill='%23AAA' points='720 300 630 450 810 450'/%3E%3Cpolygon fill='%23666' points='720 300 810 150 630 150'/%3E%3Cpolygon fill='%23FFF' points='900 300 810 450 990 450'/%3E%3Cpolygon fill='%23999' points='900 300 990 150 810 150'/%3E%3Cpolygon points='0 600 -90 750 90 750'/%3E%3Cpolygon fill='%23666' points='0 600 90 450 -90 450'/%3E%3Cpolygon fill='%23AAA' points='180 600 90 750 270 750'/%3E%3Cpolygon fill='%23444' points='180 600 270 450 90 450'/%3E%3Cpolygon fill='%23444' points='360 600 270 750 450 750'/%3E%3Cpolygon fill='%23999' points='360 600 450 450 270 450'/%3E%3Cpolygon fill='%23666' points='540 600 630 450 450 450'/%3E%3Cpolygon fill='%23222' points='720 600 630 750 810 750'/%3E%3Cpolygon fill='%23FFF' points='900 600 810 750 990 750'/%3E%3Cpolygon fill='%23222' points='900 600 990 450 810 450'/%3E%3Cpolygon fill='%23DDD' points='0 900 90 750 -90 750'/%3E%3Cpolygon fill='%23444' points='180 900 270 750 90 750'/%3E%3Cpolygon fill='%23FFF' points='360 900 450 750 270 750'/%3E%3Cpolygon fill='%23AAA' points='540 900 630 750 450 750'/%3E%3Cpolygon fill='%23FFF' points='720 900 810 750 630 750'/%3E%3Cpolygon fill='%23222' points='900 900 990 750 810 750'/%3E%3Cpolygon fill='%23222' points='1080 300 990 450 1170 450'/%3E%3Cpolygon fill='%23FFF' points='1080 300 1170 150 990 150'/%3E%3Cpolygon points='1080 600 990 750 1170 750'/%3E%3Cpolygon fill='%23666' points='1080 600 1170 450 990 450'/%3E%3Cpolygon fill='%23DDD' points='1080 900 1170 750 990 750'/%3E%3C/g%3E%3C/pattern%3E%3C/defs%3E%3Crect x='0' y='0' fill='url(%23a)' width='100%25' height='100%25'/%3E%3Crect x='0' y='0' fill='url(%23b)' width='100%25' height='100%25'/%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+/*------------------------------------------------ nav */
+.mainNav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--dark);
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.logoImg {
+  margin: auto 20px;
+  width: 50px;
+  height: 50px;
+}
+.mainNav ul {
+  display: flex;
+  line-height: 50px;
+  margin-right: 20px;
+}
+.mainNav .menu {
+  color: #ffffff;
+  padding: 10px;
+}
+.mainNav .menu:hover,
+.mainNav .menu.active {
+  cursor: pointer;
+  background-color: #fff;
+  backdrop-filter: contrast(90%);
+  color: var(--dark);
+  font-weight: 900;
+  text-shadow: 1px 1px 0px var(--dark);
+  transform:skewX(-10deg);
+  padding-bottom: 0px;
+  border-bottom: 5px solid var(--point);
+  border-radius: 3px;
+}
+.mainNav .menu.disabled {
+  cursor:not-allowed;
+}
+
+
+
+/*------------------------------------------------ form */
+.formWrapper {
+  width: 700px;
+}
+.topLogo {
+  position: fixed;
+  top: 10px;
+  left: 20px;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+}
+
+.formBody > h1,
+.formBody > p {
+  text-align: center;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.formBody h1 {
+  margin-bottom: 30px;
+}
+.formBody > p {
+  margin-bottom: 80px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.formBody h2 {
+  margin-bottom: 20px;
+}
+.formBody h2 img {
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
+  margin-bottom: -5px;
+}
+
+.services {
+  display: flex;
+  justify-content: space-between;
+  gap:10px;
+}
+.services section {
+  width: 50%;
+  margin: 0px;
+  padding: 20px;
+}
+.serviceSort {
+  font-weight: 900;
+}
+.services section h3 {
+  font-size: 40px;
+  margin: 10px 0 5px;
+  text-shadow: 1px 1px 1px black;
+}
+.serviceSortDesc {
+  font-size: 12px;
+  margin-bottom: 20px;
+}
+.services section .serviceDesc {
+  height: 200px;
+}
+.serviceDesc table {
+  margin-top: 10px;
+  font-size: 13px;
+}
+.serviceDesc table tr {
+  line-height: 20px;
+}
+.serviceDesc .secP {
+  font-size: 11px;
+  color: var(--dark);
+}
+
+
+
+/*------------------------------------------------ tabs */
+.tabWrapper {
+  width: 100%;
+  height: 50px;
+  /* margin-bottom: 30px; */
+}
+.tabWrapper ul {
+  display: flex;
+}
+.tabList {
+  background-color: var(--gray);
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  line-height: 50px;
+  border: 1px dotted black;
+  border-radius: 5px;
+  color: black;
+}
+.tabList .idxP {
+  background-color: #ffffff;
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+  line-height: 25px;
+  text-align: center;
+  margin-right: 5px;
+  color: black;
+}
+.tabList.active {
+  background-color: var(--third);
+  font-weight: 900;
+}
+.tabList.current {
+  cursor: pointer;
+  background-color: var(--dark);
+  color: #ffffff;
+  font-weight: 900;
+}
+.tabList.disabled {
+  cursor: not-allowed;
+  background-color: var(--gray);
+  font-weight: normal;
+  color: black;
+}
+
+/*------------------------------------------------ info */
+.infoWrapper {
+  padding-top:20px;
+  margin-top: 30px;
+}
+.infoWrapper table {
+  display: block;
+  background-color: #fff;
+  color: black;
+}
+.infoWrapper form {
+  width: 100%;
+}
+.infoWrapper form input[type="text"],
+.infoWrapper form input[type="email"] {
+  width: 500px;
+}
+table.checkbox .secP {
+  display:inline-block;
+}
+table.checkbox td {
+  display: inline-block;
+  width: 25%;
+}
+table.checkbox label {
+  margin-left: 5px;
+}
+table.checkbox .lastCheckbox label {
+  margin-left: 0;
+}
+table.checkbox .lastCheckbox input[type="text"] {
+  margin-left: 5px;
+  width: 70%;
+}
+
+
+
+/*------------------------------------------------ file */
+.fileWrapper {
+  padding-top:20px;
+  margin-top: 30px;
+}
+.fileWrapper .fileName {
+  display: block;
+  z-index: 1;
+}
+.fileWrapper .main {
+  width: 100%;
+}
+.fileWrapper .fileHeader {
+  display: flex;
+  justify-content: space-between;
+}
+.secP {
+  margin-top: 5px;
+  display: block;
+  color: var(--sec);
+  font-size: 14px;
+}
+.dragFile {
+  width: 100%;
+  height: 200px;
+  overflow: auto;
+  background-color: #fff;
+  border: 2px solid var(--dark);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+}
+.dragFile .secP {
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+  font-size: 15px;
+  text-align: center;
+}
+.secP img {
+  width: 70px;
+  height: 70px;
+  display: block;
+}
+.fileWrapper .main > .sizeP {
+  padding: 10px 10px 0 0;
+  width: 100%;
+  text-align: right;
+}
+
+.btn.deleteFile {
+  background-color: rgb(201, 1, 1);
+  color: #fff;
+  margin-right: 0;
+}
+
+/*------------------------------------------------- Err */
+@keyframes ldio-0e3rbcuds72-1 {
+  0% { transform: rotate(0deg) }
+ 50% { transform: rotate(-45deg) }
+100% { transform: rotate(0deg) }
+}
+@keyframes ldio-0e3rbcuds72-2 {
+  0% { transform: rotate(180deg) }
+ 50% { transform: rotate(225deg) }
+100% { transform: rotate(180deg) }
+}
+.ldio-0e3rbcuds72 > div:nth-child(2) {
+transform: translate(-15px,0);
+}
+.ldio-0e3rbcuds72 > div:nth-child(2) div {
+position: absolute;
+top: 39.4px;
+left: 39.4px;
+width: 118.2px;
+height: 59.1px;
+border-radius: 118.2px 118.2px 0 0;
+background: #ffc12b;
+animation: ldio-0e3rbcuds72-1 1s linear infinite;
+transform-origin: 59.1px 59.1px
+}
+.ldio-0e3rbcuds72 > div:nth-child(2) div:nth-child(2) {
+animation: ldio-0e3rbcuds72-2 1s linear infinite
+}
+.ldio-0e3rbcuds72 > div:nth-child(2) div:nth-child(3) {
+transform: rotate(-90deg);
+animation: none;
+}@keyframes ldio-0e3rbcuds72-3 {
+  0% { transform: translate(187.15px,0); opacity: 0 }
+ 20% { opacity: 1 }
+100% { transform: translate(68.95px,0); opacity: 1 }
+}
+.ldio-0e3rbcuds72 > div:nth-child(1) {
+display: block;
+}
+.ldio-0e3rbcuds72 > div:nth-child(1) div {
+position: absolute;
+top: 90.62px;
+left: -7.88px;
+width: 15.76px;
+height: 15.76px;
+border-radius: 50%;
+background: #5714df;
+animation: ldio-0e3rbcuds72-3 1s linear infinite
+}
+.ldio-0e3rbcuds72 > div:nth-child(1) div:nth-child(1) { animation-delay: -0.67s }
+.ldio-0e3rbcuds72 > div:nth-child(1) div:nth-child(2) { animation-delay: -0.33s }
+.ldio-0e3rbcuds72 > div:nth-child(1) div:nth-child(3) { animation-delay: 0s }
+.loadingio-spinner-bean-eater-7ac5ws6ybzh {
+width: 197px;
+height: 197px;
+display: inline-block;
+overflow: hidden;
+background: none;
+}
+.ldio-0e3rbcuds72 {
+width: 100%;
+height: 100%;
+position: relative;
+transform: translateZ(0) scale(1);
+backface-visibility: hidden;
+transform-origin: 0 0; /* see note above */
+}
+.ldio-0e3rbcuds72 div { box-sizing: content-box; }
+/* generated by https://loading.io/ */
+
+/*---------------------------------------------- Confirm */
+.confirmWrapper {
+
+}
+.fileContainer {
+  max-height: 500px;
+  overflow: auto;
+}
+
+
+/*---------------------------------------------- Mobile */
+@media screen and (min-width: 700px) {
+  .container {
   }
 }
